--- a/guru-guide/src/App.css
+++ b/guru-guide/src/App.css
@@ -1,6 +1,10 @@
 #root {
-  max-width: 1280px;
+  max-width: 100vw;
   margin: 0 auto;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
@@ -9,13 +13,4 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
-  background-color: #f8fdf8;
-  background: linear-gradient(
-    135deg,
-    #f5fcf5 0%,
-    #f0faf0 25%,
-    #ebf7eb 50%,
-    #e6f5e6 75%,
-    #e1f3e1 100%
-  );
 }
