--- a/guru-guide/src/pages/javaScriptMethodsPage/ui/MethodCard.module.css
+++ b/guru-guide/src/pages/javaScriptMethodsPage/ui/MethodCard.module.css
@@ -129,7 +129,7 @@
 .methodDescription {
   color: #495057;
   line-height: 1.6;
-  font-size: 0.95rem;
+  font-size: 14px;
   margin: 0;
 }
 
@@ -194,6 +194,7 @@
   margin-bottom: 4px;
   white-space: pre;
   display: block;
+  font-size: 12px;
 }
 
 .exampleCode code {
