--- a/guru-guide/src/widgets/sidebar/Sidebar.module.css
+++ b/guru-guide/src/widgets/sidebar/Sidebar.module.css
@@ -2,7 +2,7 @@
   width: 280px;
   height: 100vh;
   background-color: #f8fdf8;
-  padding: 25px 20px;
+  padding: 15px;
   border-right: 2px solid #e6f7e6;
   border-left: 2px solid #e6f7e6;
   display: flex;
