--- a/guru-guide/src/pages/javaScriptMethodsPage/ui/errors/ErorsList.module.css
+++ b/guru-guide/src/pages/javaScriptMethodsPage/ui/errors/ErorsList.module.css
@@ -22,3 +22,12 @@
   padding: 0;
   list-style-type: none;
 }
+
+.error {
+  position: relative;
+  padding: 2px;
+  color: #a61e1e;
+  font-size: 13px;
+  line-height: 1.6;
+  border-bottom: 1px solid #ffe6e6;
+}
